<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo_menu1" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingLeft="40sp"
            android:paddingRight="40sp"
            >


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="0dp"
                android:theme="@style/LoginTextField"
               >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/crema_oscuro"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_user_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:theme="@style/LoginTextField"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/crema_oscuro"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_user_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_pass_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/crema_oscuro"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_pass_recovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/password_recovery_text"
                android:textColor="@color/crema_oscuro"
                android:textSize="17sp"
                />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/button"
                android:text="@string/login_button_login_text"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/sign_in_question_text"
                    android:textColor="@color/crema_oscuro"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="600"
                    android:gravity="left"
                    android:text="@string/sign_in_text"
                    android:textColor="@color/crema_ultraoscuro"
                    android:textSize="17sp"
                    android:textStyle="italic" />

            </LinearLayout>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</RelativeLayout>