<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/dialog_background_top" />
            </LinearLayout>

           <ImageView
               android:id="@+id/imageView"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:srcCompat="@drawable/logo"
               android:layout_centerInParent="true"
               />


        </RelativeLayout>


        <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:background="@drawable/dialog_background_bottom"
           android:orientation="vertical"
           android:padding="8dp">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center_horizontal"

               android:text="@string/restore_dialog_title"
               android:textColor="@color/crema_oscuro"
               android:textSize="20sp"
               android:textStyle="bold" />

           <TextView
               android:layout_width="260dp"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:gravity="center_horizontal"
               android:text="@string/restore_dialog_text"
               android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="0dp"
                android:theme="@style/LoginTextField"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/crema_oscuro"/>

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/button"
                android:text="@string/restore_dialog_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                />
       </LinearLayout>

   </LinearLayout>


</RelativeLayout>