<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/fondo_menu1"
    tools:context=".activityRecoverPass">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="60dp"
            android:paddingRight="60dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:gravity="center"
                android:text="@string/restore_text"
                android:textColor="@color/crema_oscuro"
                android:textSize="20sp" />

            <com.alimuzaffar.lib.pin.PinEntryEditText
                android:id="@+id/txt_pin_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:digits="1234567890"
                android:inputType="number"
                android:maxLength="5"
                android:textIsSelectable="false"
                android:textSize="20sp"
                android:layout_marginBottom="60dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_reco_pass_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:theme="@style/LoginTextField"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/crema_oscuro"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tit_reco_pass_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_pass_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/crema_oscuro"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_user_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:theme="@style/LoginTextField"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/crema_oscuro"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_user_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_pass_hint_rep"
                    android:inputType="textPassword"
                    android:textColor="@color/crema_oscuro"/>

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/button"
                android:text="@string/button_recover_pass"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                />
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
<!--
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:gravity="center"
                    android:text="@string/restore_text"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <com.alimuzaffar.lib.pin.PinEntryEditText
                    android:id="@+id/txt_pin_entry"
                    android:layout_width="300dp"
                    android:imeOptions="actionNext"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:cursorVisible="false"
                    android:digits="1234567890"
                    android:inputType="number"
                    android:maxLength="5"
                    android:textIsSelectable="false"
                    android:textSize="20sp"
                    android:theme="@style/LoginTextField" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:paddingBottom="10dp"
                    android:theme="@style/LoginTextField"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pass_sign_in_text"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:theme="@style/LoginTextField"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_password_repeat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pass_confirm_sign_in_text"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white" />

                </android.support.design.widget.TextInputLayout>


                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button_restore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/app_button"
                    android:text="@string/restore_button"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>-->


</LinearLayout>